feat: batch client exercise cover delivery
